--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     compile "org.grails.plugins:gsp"
 
     compile 'org.webjars:bootstrap:4.1.3'
+    compile "org.grails.plugins:spring-security-core:3.2.3"
+    compile 'org.grails.plugins:quartz:2.0.13'
 
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
