--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compile "org.grails.plugins:spring-security-core:3.2.3"
     compile 'org.grails.plugins:quartz:2.0.13'
 
+    compile "org.grails.plugins:spring-security-core:3.2.3"
+
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
